# substra-tools

./: .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.minimal  Dockerfile.workflows  Jenkinsfile  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: publish.yml  publish_docker.yml  python.yml  towncrier-changelog.yml
changes/: 100.changed  101.removed  90.changed  92.changed
docs/: api.md
substratools/: __init__.py  __version__.py  algo.py  exceptions.py  function.py  method.py  metrics.py  model.py  opener.py  serializers.py  task_resources.py  utils.py  workspace.py
substratools/model/: model
tests/: __init__.py  conftest.py  test_aggregatealgo.py  test_algo.py  test_compositealgo.py  test_function.py  test_metrics.py  test_opener.py  test_task_resources.py  test_utils.py  test_workflow.py  utils.py
