[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["tests*"]

[tool.hatch.version]
path = "substratools/__version__.py"

[project]
name = "substratools"
description = "Python tools to submit functions on the Substra platform"
dynamic = ["version"]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = []
keywords = ["substra"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = { file = "LICENSE" }
authors = [{ name = "Owkin, Inc." }]

[project.optional-dependencies]
dev = ["flake8", "pytest", "pytest-cov", "pytest-mock", "numpy", "towncrier"]

[project.urls]
Documentation = "https://docs.substra.org/en/stable/"
Repository = "https://github.com/Substra/substra-tools"
Changelog = "https://github.com/Substra/substra-tools/blob/main/CHANGELOG.md"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
filter_files = true
force_single_line = true
line_length = 120
profile = "black"

[tool.pytest.ini_options]
addopts = "-v --cov=substratools"

[tool.towncrier]
directory = "changes"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}](https://github.com/Substra/substra-tools/releases/tag/{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/Substra/substra-tools/pull/{issue})"
[tool.towncrier.fragment.added]
[tool.towncrier.fragment.removed]
[tool.towncrier.fragment.changed]
[tool.towncrier.fragment.fixed]
